Improvements based on David's feedback - Section titles shows while loading - Fixed issue with chart layout spacing

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -2805,6 +2805,7 @@ th[st-sort]{
 
 .dashboard svg, .dashboard .highcharts-container {
    overflow: visible !important;
+   z-index:1 !important;
 }
 
 .dashboard .separator{
